<?php

namespace App\Policies;

use App\Models\MatchFixture;
use App\Models\User;
use App\Policies\Concerns\ChecksAdminPermissions;
use Illuminate\Auth\Access\Response;

class MatchFixturePolicy
{
    use ChecksAdminPermissions;

    public function viewAny(User $user): Response
    {
        return $this->allowIfPermission($user, 'matches.manage');
    }

    public function view(User $user, MatchFixture $matchFixture): Response
    {
        return $this->allowIfPermission($user, 'matches.manage');
    }

    public function create(User $user): Response
    {
        return $this->allowIfPermission($user, 'matches.manage');
    }

    public function update(User $user, MatchFixture $matchFixture): Response
    {
        return $this->allowIfPermission($user, 'matches.manage');
    }

    public function delete(User $user, MatchFixture $matchFixture): Response
    {
        return $this->allowIfPermission($user, 'matches.manage');
    }
}
